fix bug with z-index and dim styles in dialogs.scss

--- a/app/sass/platform/dialogs.scss
+++ b/app/sass/platform/dialogs.scss
@@ -6,7 +6,6 @@ Copyright 2016 Fresco News, Inc. All Rights Reserved.
 
 -------------------------------------------------------------------------------------*/
 
-$z-index:500;
 
 /**
  * Dialog Element
@@ -20,7 +19,7 @@ $z-index:500;
     margin:auto;
     display:none;
     opacity:0;
-    z-index:$z-index;
+    z-index: $z-dim + 1;
     @include box-shadow(0 16px 16px 0 rgba(0, 0, 0, 0.24), 0 0 16px 0 rgba(0, 0, 0, 0.12));
     @include border-radius(2px);
     @include transition(opacity 0.15s ease-in-out);
@@ -101,12 +100,4 @@ $z-index:500;
 
         }
     }
-}
-
-.dim {
-    background:#313131;
-    position:fixed;
-    width:100%;
-    height:100;
-    z-index:$z-index - 1;
 }
